# animal-traceability-trial

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b5cc48fddce_initial.py
backend/app/: main.py
backend/app/config/: logging.py  settings.py
backend/app/core/: database.py  exceptions.py
backend/app/models/: __init__.py  animal.py  animal_lot_period.py  base_model.py  enums.py  event.py  field.py  lot.py
backend/app/repositories/: animal_lot_period_repository.py  animal_repository.py  base.py  event_repository.py  lot_repository.py
backend/app/routers/: animals.py  lots.py
backend/app/schemas/: animal.py  common.py  event.py  lot.py
backend/app/scripts/: seed.py
backend/app/services/: animal_service.py  event_service.py  lot_service.py
backend/specs/01-backend/: design.md  requirements.md  tasks.md
backend/tests/: conftest.py  test_animals.py  test_csv_scale.py  test_events.py  test_lots.py
backend/tests/fixtures/: events_vaccination.csv  generate.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/specs/01-frontend/: design.md  requirements.md  tasks.md
frontend/src/: App.tsx  index.css
frontend/src/api/: animals.ts  client.ts  lots.ts
frontend/src/components/: BulkResultCard.tsx  DropZone.tsx  ErrorMessage.tsx  StatCard.tsx
frontend/src/hooks/: useAnimalHistory.ts  useAnimals.ts  useLotAdg.ts  useLotAnimals.ts  useLots.ts
frontend/src/pages/: Adg.tsx  AnimalHistory.tsx  LotStatus.tsx  Upload.tsx
(+5 files in other folders)
